# Dining_philosophers

./: CMakeLists.txt  readme.md
include/: Fork.hpp  Philosopher.hpp  Plate.hpp
src/: CMakeLists.txt  Philosopher.cpp  Plate.cpp  main.cpp
